<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:gravity="center_vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    app:strokeColor="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:ignore="UselessParent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/_2024_02_08_08_30_11"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/this_is_a_message_generate" />


            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iconButton"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/deleteitem"
            app:cornerRadius="10dp"
            app:icon="@drawable/iconex_line_two_tone_trash_can"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>