<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.PaymentsReceived">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:gravity="center"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:clickable="true"
                android:elevation="3dp"
                android:focusable="true"
                app:title="Pagos"
                app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_filter_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterAll"
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/paymentFilterAll"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterYape"
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:checkable="true"
                    android:text="@string/paymentFilterYape"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterPlin"
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:checkable="true"
                    android:text="@string/paymentFilterPlin"
                    android:textAlignment="center" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pagos_de_hoy"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:id="@+id/btnReport"
                app:cornerRadius="5dp"
                style="@style/Widget.Material3.Button.TonalButton"
                app:icon="@drawable/iconex_line_two_tone_calendar"
                android:text="@string/por_fecha"
                android:layout_height="60dp"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:strokeColor="#00FFFFFF">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:id="@+id/txtTotal"
            android:paddingBottom="15dp"
            android:text="S/ 0.00"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    </com.google.android.material.card.MaterialCardView>


</FrameLayout>