<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:gravity="center_vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    app:strokeColor="#00FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <io.getstream.avatarview.AvatarView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/contact_avatar"
            app:avatarViewInitials="AB"
            app:avatarViewInitialsBackgroundColor="?colorOnTertiaryFixedVariant"
            app:avatarViewInitialsTextSize="16sp"
            app:avatarViewInitialsTextStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            tools:ignore="UselessParent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/contact_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtContacNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number" />




        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteContact"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/deleteitem"
            app:iconSize="24dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/iconex_line_two_tone_trash_can"/>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>