<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.ActivateConfirmView">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

      <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/animationView"
          android:layout_width="wrap_content"
          android:layout_weight="5"
          android:layout_height="0dp"
          android:padding="100dp"
          app:lottie_rawRes="@raw/timer"
          app:lottie_autoPlay="true"
          app:lottie_loop="true"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:layout_weight="1"
          android:padding="20dp"
          android:layout_height="wrap_content">

         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:padding="10dp"
             android:text="@string/msg_activation_device"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textSize="18sp"
             android:textStyle="bold" />

         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="5dp"
             app:strokeColor="#00FFFFFF">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

               <com.google.android.material.textview.MaterialTextView
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_marginTop="10dp"
                   android:text="@string/id_activation_device"
                   android:textSize="18sp"
                   android:textStyle="bold" />

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/txtEmei"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_marginTop="10dp"
                   android:layout_weight="1"
                   android:textAlignment="textEnd"
                   android:textSize="18sp"
                   android:textStyle="bold" />
            </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/Widget.Material3.Button.TonalButton"
             app:icon="@drawable/whatsapp_icon"
             android:layout_height="65dp"
             android:id="@+id/btnGoToHome"
             android:text="@string/btn_solicitar_activacion"
             android:layout_gravity="center"
             />

      </LinearLayout>
   </LinearLayout>



</FrameLayout>